tests/build/widget_macro/fail/module_path_malformed2.rs
use zero_ui::core::widget2;

#[widget2($crate::widget, invalid)]
pub mod widget {}

fn main() {}
